[package]
name = "koh"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["koh authors"]
repository = "https://github.com/gold-silver-copper/koh"
description = "koh — a resilient peer-to-peer remote shell: mosh, rewritten in Rust over iroh"
readme = "README.md"
keywords = ["mosh", "shell", "terminal", "iroh", "p2p"]
categories = ["command-line-utilities", "network-programming"]
# Keep the published .crate lean: the porting-research notes and docker test infra aren't needed
# to build or use koh.
exclude = ["docs/", "testing/"]

[[bin]]
name = "koh"
path = "src/main.rs"

[dependencies]
# transport (pinned: iroh API churns; see README). iroh 1.0 brings its own QUIC backend (noq, a
# quinn fork); we never depend on quinn directly.
iroh = "=1.0.0"
# terminal / pty / tui
vt100 = "=0.16.2"
portable-pty = "=0.9.0"
unicode-width = "0.2"
termina = "0.3.3"
# serialization
postcard = { version = "=1.1.3", features = ["use-std"] }
serde = { version = "=1.0.228", features = ["derive"] }
bytes = "1"
# DEFLATE compression of the SSP instruction payload before fragmenting (pure-Rust, no unsafe).
miniz_oxide = "0.8"
# async / runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
# auth (passphrase second factor)
blake3 = "1"
argon2 = "0.5"
constant_time_eq = "0.5"
zeroize = "1"
secrecy = "0.10"
# render the endpoint id as a terminal QR for `koh serve --qr`; default-features = false drops the
# heavy image/svg/pic renderers (we only use the built-in unicode half-block renderer).
qrcode = { version = "=0.14.1", default-features = false }
# utility
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
rand = "0.8"
data-encoding = "2"
directories = "5"

[dev-dependencies]
proptest = "1"

[profile.release]
opt-level = 3
lto = "thin"

# ---------------------------------------------------------------------------
# Lints. Goal: the library is PANIC-FREE by construction, enforced by clippy. The
# panic-introducing lints below are denied; any genuinely-infallible site (a
# poisoned-mutex check, a structurally-non-empty container, statically-valid
# params) is justified with a local `#[expect(clippy::…, reason = "…")]`. Test
# code keeps `unwrap`/`expect`/`panic`/`indexing` via the keys in `clippy.toml`.
# ---------------------------------------------------------------------------
[lints.rust]
# A bare `unsafe` block must justify itself; this codebase is 100% safe today.
unsafe_code = "forbid"

[lints.clippy]
# Lint-group toggles (priority = -1 so individual lints below can override).
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# --- panic prevention (deny): no explicit panics in non-test code ---
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
todo = "deny"
unimplemented = "deny"
get_unwrap = "deny"
unwrap_in_result = "deny"
panic_in_result_fn = "deny"
exit = "deny"
indexing_slicing = "deny"        # `a[i]` panics on out-of-bounds — use `.get()`
string_slice = "deny"            # `s[a..b]` panics on a non-char-boundary
expect_fun_call = "deny"

# --- additional correctness / footgun restrictions (deny) ---
mem_forget = "deny"
lossy_float_literal = "deny"
float_cmp_const = "deny"
rc_buffer = "deny"
rest_pat_in_fully_bound_structs = "deny"

# --- pedantic lints that are noisy or fight this codebase's deliberate style ---
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
doc_markdown = "allow"
# `_ = future => {}` is the conventional tokio::select! arm; `() = ...` is noisier, not clearer.
ignored_unit_patterns = "allow"
# nursery lints with known false positives / churn
cognitive_complexity = "allow"
option_if_let_else = "allow"
significant_drop_tightening = "allow"   # false-positives on single-statement lock guards
duration_suboptimal_units = "allow"     # `from_secs(3600)` is clearer than a contrived larger unit
# `const fn` on every getter is high-churn for debatable benefit (and `const` is part of the
# public API surface — making it implicit everywhere is not obviously desirable); not enforced.
missing_const_for_fn = "allow"
