[package]
name = "koh"
version = "0.4.4"
edition = "2021"
# The effective floor is dictated by the `=`-pinned iroh 1.0.0 (edition 2024 + rust-version 1.91),
# not by koh's own 2021 edition. Declaring it turns "cargo install on an old toolchain" into a clear
# "requires rustc 1.91" instead of a confusing mid-compile error. Keep in sync with iroh on each bump.
rust-version = "1.91"
license = "GPL-3.0-or-later"
authors = ["koh authors"]
repository = "https://github.com/gold-silver-copper/koh"
description = "koh — a resilient peer-to-peer remote shell: mosh, rewritten in Rust over iroh"
readme = "README.md"
keywords = ["mosh", "shell", "terminal", "iroh", "p2p"]
categories = ["command-line-utilities", "network-programming"]
# Keep the published .crate lean: the porting-research notes, the test infra, the integration tests,
# and the chaos example aren't needed to build or USE koh (the lib's own unit tests live in `src/`).
exclude = ["docs/", "testing/", "tests/", "examples/", "SECURITY_AUDIT_v0.3.1.md"]

[[bin]]
name = "koh"
path = "src/main.rs"

[dependencies]
# transport (pinned: iroh API churns; see README). iroh 1.0 brings its own QUIC backend (noq, a
# quinn fork); we never depend on quinn directly.
iroh = "=1.0.0"
# terminal / pty / tui
vt100 = "=0.16.2"
portable-pty = "=0.9.0"
unicode-width = "0.2"
termina = "0.3.3"
# serialization. default-features = false drops postcard's `heapless-cas` default, whose
# `atomic-polyfill` transitive dep is unmaintained (RUSTSEC-2023-0089); we only need `use-std`
# (which pulls `alloc`) for `to_allocvec`/`from_bytes`. See KOH-17.
postcard = { version = "=1.1.3", default-features = false, features = ["use-std"] }
serde = { version = "=1.0.228", features = ["derive"] }
bytes = "1"
# DEFLATE compression of the SSP instruction payload before fragmenting (pure-Rust, no unsafe).
miniz_oxide = "0.8"
# async / runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
# raise(SIGTSTP) for the Ctrl-^ Ctrl-Z client suspend without `unsafe` (nix wraps the libc call
# internally; our crate stays `forbid(unsafe)`). `signal`-only, no default features. Already present
# transitively, so this pins no new major version.
nix = { version = "0.28", default-features = false, features = ["signal"] }
# auth (passphrase second factor). The handshake is a balanced PAKE (SPAKE2, RFC 9382) so a server
# a client merely *dials* cannot offline-crack the passphrase from a transcript (closes KOH-03).
# Pinned (=) like the other crypto/transport deps: a PAKE's wire/curve details must not drift under us.
spake2 = "=0.4.0"
blake3 = "1"
argon2 = "0.5"
constant_time_eq = "0.5"
zeroize = "1"
secrecy = "0.10"
# render the endpoint id as a terminal QR for `koh serve --qr`; default-features = false drops the
# heavy image/svg/pic renderers (we only use the built-in unicode half-block renderer).
qrcode = { version = "=0.14.1", default-features = false }
# utility
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
rand = "0.8"
data-encoding = "2"
directories = "5"

[dev-dependencies]
proptest = "1"

[profile.release]
opt-level = 3
lto = "thin"

# ---------------------------------------------------------------------------
# Lints. Goal: the library is PANIC-FREE by construction, enforced by clippy. The
# panic-introducing lints below are denied; any genuinely-infallible site (a
# poisoned-mutex check, a structurally-non-empty container, statically-valid
# params) is justified with a local `#[expect(clippy::…, reason = "…")]`. Test
# code keeps `unwrap`/`expect`/`panic`/`indexing` via the keys in `clippy.toml`.
# ---------------------------------------------------------------------------
[lints.rust]
# A bare `unsafe` block must justify itself; this codebase is 100% safe today.
unsafe_code = "forbid"

[lints.clippy]
# Lint-group toggles (priority = -1 so individual lints below can override).
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# --- panic prevention (deny): no explicit panics in non-test code ---
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
todo = "deny"
unimplemented = "deny"
get_unwrap = "deny"
unwrap_in_result = "deny"
panic_in_result_fn = "deny"
exit = "deny"
indexing_slicing = "deny"        # `a[i]` panics on out-of-bounds — use `.get()`
string_slice = "deny"            # `s[a..b]` panics on a non-char-boundary
expect_fun_call = "deny"

# --- additional correctness / footgun restrictions (deny) ---
mem_forget = "deny"
lossy_float_literal = "deny"
float_cmp_const = "deny"
rc_buffer = "deny"
rest_pat_in_fully_bound_structs = "deny"

# --- pedantic lints that are noisy or fight this codebase's deliberate style ---
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
doc_markdown = "allow"
# `_ = future => {}` is the conventional tokio::select! arm; `() = ...` is noisier, not clearer.
ignored_unit_patterns = "allow"
# nursery lints with known false positives / churn
cognitive_complexity = "allow"
option_if_let_else = "allow"
significant_drop_tightening = "allow"   # false-positives on single-statement lock guards
duration_suboptimal_units = "allow"     # `from_secs(3600)` is clearer than a contrived larger unit
# `const fn` on every getter is high-churn for debatable benefit (and `const` is part of the
# public API surface — making it implicit everywhere is not obviously desirable); not enforced.
missing_const_for_fn = "allow"
