[package]
name = "koh"
version = "0.9.1"
edition = "2021"
# The effective floor is dictated by the `=`-pinned iroh 1.0.0 (edition 2024 + rust-version 1.91),
# not by koh's own 2021 edition. Declaring it turns "cargo install on an old toolchain" into a clear
# "requires rustc 1.91" instead of a confusing mid-compile error. Keep in sync with iroh on each bump.
rust-version = "1.91"
license = "GPL-3.0-or-later"
authors = ["Stephen Korzen <stephen.korzen@gmail.com>"]
repository = "https://github.com/gold-silver-copper/koh"
homepage = "https://github.com/gold-silver-copper/koh"
documentation = "https://docs.rs/koh"
description = "koh — a resilient peer-to-peer remote shell: mosh, rewritten in Rust over iroh"
readme = "README.md"
keywords = ["mosh", "shell", "terminal", "iroh", "p2p"]
categories = ["command-line-utilities", "network-programming"]
# Keep the published .crate lean: the porting-research notes, the test infra, the integration tests,
# the chaos example, and the dev/CI tooling aren't needed to build or USE koh (the lib's own unit
# tests live in `src/`). COPYING (the license) and CHANGELOG.md DO ship.
exclude = [
    "docs/",
    "testing/",
    "tests/",
    "examples/",
    "fuzz/",
    ".github/",
    "clippy.toml",
    "deny.toml",
    # the self-contained HTML slide deck (docs only, ~1.6 MB) — not needed to build or use koh.
    "koh-presentation.html",
]

[[bin]]
name = "koh"
path = "src/main.rs"

[dependencies]
# transport (pinned: iroh API churns; see README). iroh 1.0 brings its own QUIC backend (noq, a
# quinn fork); we never depend on quinn directly.
iroh = "=1.0.0"
# terminal / pty / tui
vt100 = "=0.16.2"
portable-pty = "=0.9.0"
unicode-width = "0.2"
termina = "0.3.3"
# serialization. default-features = false drops postcard's `heapless-cas` default, whose
# `atomic-polyfill` transitive dep is unmaintained (RUSTSEC-2023-0089); we only need `use-std`
# (which pulls `alloc`) for `to_allocvec`/`from_bytes`. See KOH-17.
postcard = { version = "=1.1.3", default-features = false, features = ["use-std"] }
serde = { version = "=1.0.228", features = ["derive"] }
bytes = "1"
# DEFLATE compression of the SSP instruction payload before fragmenting (pure-Rust, no unsafe).
miniz_oxide = "0.8"
# async / runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
# raise(SIGTSTP) for the Ctrl-^ Ctrl-Z client suspend without `unsafe` (nix wraps the libc call
# internally; our crate stays `forbid(unsafe)`). `signal`-only, no default features. Already present
# transitively, so this pins no new major version.
nix = { version = "0.28", default-features = false, features = ["signal"] }
# Argon2id — the password KDF for the encrypted-at-rest identity key (`koh-key-v1`). RustCrypto,
# used through its safe, `Result`-returning API.
argon2 = "0.5"
zeroize = "1"
secrecy = "0.10"
# At-rest encryption of the on-disk identity key (the `koh-key-v1` format, modeled on OpenSSH's
# openssh-key-v1): a vetted AEAD over the 32-byte secret, keyed by Argon2id. Already in the lockfile
# transitively via iroh's QUIC backend, so promoting it to a direct dep adds no new compiled crate —
# it makes koh own/audit the version. NOT home-grown crypto.
aes-gcm = "0.10"
# Optional FIDO2/security-key second factor (`--require-sk`): verify OpenSSH `sk-ssh-ed25519@openssh.com`
# signatures. `ed25519-dalek` does the Ed25519 `verify_strict`; `sha2` builds the FIDO2 authenticator-data
# hash. Both are ALREADY in the lockfile transitively via iroh's crypto stack, so promoting them to direct
# deps adds no new compiled crate — it makes koh own/audit the version (same rationale as aes-gcm/argon2).
# NOT home-grown crypto: the signature math is entirely ed25519-dalek. See `transport_iroh::sk_auth`.
ed25519-dalek = "=3.0.0-rc.0"
sha2 = "=0.11.0"
# ECDSA-P256 verification for the `ecdsa-sk` (sk-ecdsa-sha2-nistp256@openssh.com) security-key type.
# Unlike ed25519-dalek/sha2 above (already in the tree), this RustCrypto stack is a genuinely NEW
# dependency; it is pulled in only for the optional ecdsa-sk key type — ed25519-sk needs none of it.
# Vetted, pure-Rust; verification is `p256::ecdsa`'s `Verifier`, not home-grown.
p256 = { version = "=0.13.2", features = ["ecdsa"] }
# No-echo passphrase prompt for the encrypted identity key (the `ssh-keygen -p` / login analogue).
rpassword = "7"
# render the endpoint id as a terminal QR on `koh serve` (always printed); default-features = false drops the
# heavy image/svg/pic renderers (we only use the built-in unicode half-block renderer).
qrcode = { version = "=0.14.1", default-features = false }
# utility
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
rand = "0.8"
data-encoding = "2"

[dev-dependencies]
proptest = "1"

[profile.release]
opt-level = 3
lto = "thin"
# Keep release as strict as debug on integer overflow: koh is an interactive tool (not a throughput
# engine), so the per-op cost is negligible, and it makes a wrap-on-overflow of any peer-derived
# arithmetic a loud panic in release too — not a silent miscompute. (`cast_*` lints are allowed, so
# this is the backstop for a future raw `a + b` on a wire `u64`/`u16`.) NOTE: panic stays `unwind`,
# never `abort` — the vt100 containment (`process_contained`) relies on `catch_unwind`.
overflow-checks = true

# ---------------------------------------------------------------------------
# Lints. Goal: the library is PANIC-FREE by construction, enforced by clippy. The
# panic-introducing lints below are denied; any genuinely-infallible site (a
# poisoned-mutex check, a structurally-non-empty container, statically-valid
# params) is justified with a local `#[expect(clippy::…, reason = "…")]`. Test
# code keeps `unwrap`/`expect`/`panic`/`indexing` via the keys in `clippy.toml`.
# ---------------------------------------------------------------------------
[lints.rust]
# A bare `unsafe` block must justify itself; this codebase is 100% safe today.
unsafe_code = "forbid"
# Dead code is a hard compile error. `deny` (not `forbid`) because clap's derive macros
# (`Args`/`Subcommand`/`ValueEnum`) emit an internal `#[allow(dead_code)]` that `forbid` rejects
# outright (E0453) — `deny` is the strictest level compatible with the derives while still failing the
# build on any genuine dead code we write. Combined with the minimal-surface discipline (test-only
# helpers are `#[cfg(test)]`-gated, not left `pub`), this keeps the crate from accreting unused items;
# it also covers the integration-test/example crates, so every helper there must be used too.
dead_code = "deny"

[lints.clippy]
# Lint-group toggles (priority = -1 so individual lints below can override).
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# --- panic prevention (deny): no explicit panics in non-test code ---
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
todo = "deny"
unimplemented = "deny"
get_unwrap = "deny"
unwrap_in_result = "deny"
panic_in_result_fn = "deny"
exit = "deny"
indexing_slicing = "deny"        # `a[i]` panics on out-of-bounds — use `.get()`
string_slice = "deny"            # `s[a..b]` panics on a non-char-boundary
expect_fun_call = "deny"

# --- additional correctness / footgun restrictions (deny) ---
mem_forget = "deny"
lossy_float_literal = "deny"
float_cmp_const = "deny"
rc_buffer = "deny"
rest_pat_in_fully_bound_structs = "deny"

# --- pedantic lints that are noisy or fight this codebase's deliberate style ---
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
doc_markdown = "allow"
# `_ = future => {}` is the conventional tokio::select! arm; `() = ...` is noisier, not clearer.
ignored_unit_patterns = "allow"
# nursery lints with known false positives / churn
cognitive_complexity = "allow"
option_if_let_else = "allow"
significant_drop_tightening = "allow"   # false-positives on single-statement lock guards
duration_suboptimal_units = "allow"     # `from_secs(3600)` is clearer than a contrived larger unit
# `const fn` on every getter is high-churn for debatable benefit (and `const` is part of the
# public API surface — making it implicit everywhere is not obviously desirable); not enforced.
missing_const_for_fn = "allow"
