# Coverage-guided fuzzing of koh's untrusted-input decode paths (run with `cargo +nightly fuzz run
# <target>`; needs `cargo install cargo-fuzz`). Standalone package — NOT a workspace member of koh, so
# `cargo build`/`cargo test` in the parent never touch it, and it is excluded from the published
# .crate. One harness per attacker-reachable parser (the OpenSSH / OSS-Fuzz one-harness-per-parser
# doctrine): server->client screen apply (the vt100 surface) and the wire instruction decoder.
[package]
name = "koh-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
koh = { path = ".." }
libfuzzer-sys = "0.4"

[[bin]]
name = "screen_apply"
path = "fuzz_targets/screen_apply.rs"
test = false
doc = false
bench = false

[[bin]]
name = "wire_decode"
path = "fuzz_targets/wire_decode.rs"
test = false
doc = false
bench = false
