[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "rmosh dev tasks: network-chaos harness, integration drivers"
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
rmosh-ssp.workspace = true
rmosh-terminal.workspace = true
rmosh-input.workspace = true
rmosh-predict.workspace = true
anyhow.workspace = true
clap.workspace = true
