[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "koh dev tasks: network-chaos harness, integration drivers"
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
koh-ssp.workspace = true
koh-terminal.workspace = true
koh-input.workspace = true
koh-predict.workspace = true
anyhow.workspace = true
clap.workspace = true

[lints]
workspace = true
