[package]
name = "rmosh-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "rmosh client: input + Transport<Input,Screen> + predictor + termina render"

[[bin]]
name = "rmosh-client"
path = "src/main.rs"

[dependencies]
rmosh-wire.workspace = true
rmosh-ssp.workspace = true
rmosh-terminal.workspace = true
rmosh-input.workspace = true
rmosh-predict.workspace = true
rmosh-transport-iroh.workspace = true
iroh.workspace = true
tokio.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
data-encoding.workspace = true
directories.workspace = true
vt100.workspace = true
termina = "0.3.3"
secrecy = "0.10"

[dev-dependencies]
# the server lib, so the e2e test can run a real session over a loopback iroh connection
rmosh-server.workspace = true
# to attach the real client binary to an allocated PTY and drive it headlessly
portable-pty.workspace = true
