[package]
name = "koh-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "koh client: input + Transport<Input,Screen> + predictor + termina render"

[dependencies]
koh-wire.workspace = true
koh-ssp.workspace = true
koh-terminal.workspace = true
koh-input.workspace = true
koh-predict.workspace = true
koh-transport-iroh.workspace = true
iroh.workspace = true
tokio.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
data-encoding.workspace = true
directories.workspace = true
vt100.workspace = true
termina = "0.3.3"
secrecy = "0.10"

[dev-dependencies]
# the server lib, so the e2e test can run a real session over a loopback iroh connection
koh-server.workspace = true

[lints]
workspace = true
