[package]
name = "koh-input"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "koh UserInput state: keystrokes + resize as an SSP-synchronized object"

[dependencies]
koh-ssp.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
