[package]
name = "koh-predict"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "koh prediction / local-echo engine (overlays, epochs, adaptive engage)"

[dependencies]
koh-terminal.workspace = true
koh-input.workspace = true
vt100.workspace = true
unicode-width.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
