[package]
name = "koh-pty"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "koh PTY allocation, shell spawn, SIGWINCH/resize, child reaping"

[dependencies]
portable-pty.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true

[lints]
workspace = true
