[package]
name = "koh-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "koh server: PTY + terminal emulator + Transport<Screen,Input> over iroh"

[dependencies]
koh-wire.workspace = true
koh-ssp.workspace = true
koh-terminal.workspace = true
koh-input.workspace = true
koh-transport-iroh.workspace = true
koh-pty.workspace = true
iroh.workspace = true
tokio.workspace = true
tokio-util.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
data-encoding.workspace = true
directories.workspace = true
rand.workspace = true
secrecy = "0.10"
# Render the endpoint id as a terminal QR for --qr. default-features = false drops the heavy
# image/svg/pic renderers; we only use the built-in unicode (half-block) renderer.
qrcode = { version = "=0.14.1", default-features = false }

[lints]
workspace = true
