[package]
name = "koh-ssp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "koh State Synchronization Protocol: SyncState trait + generic Transport over datagrams"

[dependencies]
koh-wire.workspace = true
serde.workspace = true
postcard.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
rand.workspace = true

[lints]
workspace = true
