[package]
name = "koh-terminal"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "koh TerminalScreen state (vt100-backed) with SSP diff/apply"

[dependencies]
koh-ssp.workspace = true
serde.workspace = true
vt100.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
