[package]
name = "rmosh-transport-iroh"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "rmosh iroh endpoint setup, dial-by-endpoint-id, datagram channel, RTT readout"

[dependencies]
rmosh-wire.workspace = true
# All QUIC types (Connection, SendDatagramError, PathId, …) come from iroh::endpoint::*,
# which re-exports iroh's transport backend (noq, a quinn fork). We do NOT depend on quinn.
iroh.workspace = true
bytes.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
data-encoding.workspace = true
rand.workspace = true
# BLAKE3 for the optional passphrase nonce-challenge (passphrase never crosses the wire).
blake3 = "1"
# Argon2id work factor for the passphrase second factor: each online guess of a leaked-but-
# allowlisted client's passphrase costs the attacker real CPU/memory (paired with the per-peer
# rate limiter). Salt is fixed/deterministic so both peers derive the same PSK.
argon2 = "0.5"
# Constant-time comparison of the challenge response (no early-exit timing oracle).
constant_time_eq = "0.5"
# Zeroize the derived PSK on drop (reduces how long it lingers in heap memory).
zeroize = "1"

[dev-dependencies]
# drive the real SSP Transport over a real iroh datagram connection in the e2e test
rmosh-ssp.workspace = true
serde.workspace = true

[lints]
workspace = true
