[package]
name = "koh-wire"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "koh wire format: SSP instruction envelope, framing, fragmentation"

[dependencies]
serde.workspace = true
postcard.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
